Eclipse 1723 terminé à 99% il manque la validation par mail et création du google doc

--- a/front-end/main.html
+++ b/front-end/main.html
@@ -59,20 +59,20 @@
                     <div class="part-two-text">
                         <h1>L'Eclipse 1723</h1>
                         <div class="part-three-line"></div>
-                        <h3>Un lieu inoubliable</h3>
+                        <h2>Un lieu inoubliable</h2>
                         <p>Bienvenue à l’Eclipse 1723, un loft unique. Prêts à succomber à son charme ? Réservez dès maintenant et laissez la magie opérer...</p>
                     </div>   
                     <div class="scrolling-images-part-two">
 
 
                         <div class="left-image">
-                            <img src="style/images-used/part-two/part-two-living-room.webp" alt="salon avec vue sur la montagne">
+                            <img src="style/images-used/part-two/part-two-living-room.webp" alt="Salon avec vue sur la montagne">
                         </div>
                         <div class="main-image">
-                            <img src="style/images-used/part-two/part-two-jacuzzi-.webp" alt="vu depuis le jacuzzi">
+                            <img src="style/images-used/part-two/part-two-jacuzzi-.webp" alt="Vu depuis le jacuzzi">
                         </div>
                         <div class="right-image">
-                            <img src="style/images-used/part-two/part-two-pool-table.webp" alt="cuisine spacieuse du loft">
+                            <img src="style/images-used/part-two/part-two-pool-table.webp" alt="Cuisine spacieuse du loft">
                         </div>
 
                     </div>
@@ -90,7 +90,7 @@
                     <div class="container-part-three">
 
                         <div class="part-three-img">
-                            <img class="main-image-part-three" src="style/images-used/part-three/part-three-kitchen.webp" alt="cuisine du loft">
+                            <img class="main-image-part-three" src="style/images-used/part-three/part-three-kitchen.webp" alt="Cuisine spacieuse et élégante du loft, Sauna du loft et Bar du loft">
                         </div>
                         <div class="part-three-text">
                             <h3 id="part-three-text-heading">Bienvenue à l'Eclipse 1723</h3>
@@ -102,9 +102,9 @@
                             </h2>
                             <p id="part-three-text-description">Une cuisine moderne et luxueuse, pensée pour allier confort, espace et plaisir culinaire.</p>
                             <div class="part-three-choose">
-                                <img class="part-three-choose-button" id="leftImage" src="style/images-used/part-three/part-three-kitchen.webp" alt="Cuisine spacieuse du loft">
-                                <img class="part-three-choose-button"  id="centerImage" src="style/images-used/part-three/part-three-sauna.webp" alt="Sauna du loft">
-                                <img class="part-three-choose-button" id ="rightImage" src="style/images-used/part-three/part-three-bar.webp" alt="Bar du loft">
+                                <img class="part-three-choose-button" id="leftImage" src="style/images-used/part-three/part-three-kitchen.webp" alt="Cuisine spacieuse et élégante du loft">
+                                <img class="part-three-choose-button"  id="centerImage" src="style/images-used/part-three/part-three-sauna.webp" alt="Sauna du loft à l'intérieur en bois">
+                                <img class="part-three-choose-button" id ="rightImage" src="style/images-used/part-three/part-three-bar.webp" alt="Bar du loft avec ambiance chaleureuse">
                             </div>
                         </div>
                     </div>
@@ -126,10 +126,10 @@
                             <div id="lightbox-close">&times;</div>
                             <img id="lightbox-img" src="#" alt="Agrandissement">
                         </div>
-                        <img src="style/images-used/part-four/bedroom-one.webp" alt="chambre du loft avec vue sur la montagne">
-                        <img src="style/images-used/part-four/bedroom-two.webp" alt="chambre du loft avec vue sur la montagne">
-                        <img src="style/images-used/part-four/bedroom-three.webp" alt="chambre du loft avec vue sur la montagne">
-                        <img src="style/images-used/part-four/bedroom-four.webp" alt="salle de bain du loft">    
+                        <img src="style/images-used/part-four/bedroom-one.webp" alt="Chambre du loft avec une ambiance chaleureuse">
+                        <img src="style/images-used/part-four/bedroom-two.webp" alt="Chambre du loft avec une ambiance chaleureuse">
+                        <img src="style/images-used/part-four/bedroom-three.webp" alt="Grand lit avec une rambarde en bois">
+                        <img src="style/images-used/part-four/bedroom-four.webp" alt="Deux grands lits dans une chambre du loft">    
                     </div> 
                     <div class="part-four-img-bathroom">
                         <img src="style/images-used/part-four/bathroom.webp" alt="salle de bain du loft">
@@ -165,7 +165,7 @@
                         <div>
                             <h3>Politique d'annulation</h3>
                             <p>95% des réglements prépayés sont remboursables en cas d'annulation 60 jours avant l'arrivée ou plus tôt.</p>
-                            <p>50% des réglements pré-payés sont remboursables en cas d'annulation 28 jours avant l'arrivée ou plus tôt.</p>
+                            <p>50% des réglements prépayés sont remboursables en cas d'annulation 28 jours avant l'arrivée ou plus tôt.</p>
                             <p>0% remboursable si annulation après</p>
                         </div>
                         <div>
@@ -180,11 +180,14 @@
                         <div class="part-six-line-white"></div>
                             <p>Enfants autorisés</p>
                             <p>Animaux autorisés</p>
-                            <p>Arrivée : 05:00 PM</p>
-                            <p>Départ : 07:00 PM</p>
+                            <p>Arrivée : 17:00</p>
+                            <p>Départ : 19:00</p>
                         <div class="map-location">
                             <h2>Localisation</h2>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11765.765623942949!2d2.0331022735974225!3d42.503426808331824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a562462087adb5%3A0x14c67a38c1d71388!2sFont%20Romeu%2C%2066120%20Font-Romeu-Odeillo-Via!5e0!3m2!1sfr!2sfr!4v1747145212597!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11765.765623942949!2d2.0331022735974225!3d42.503426808331824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a562462087adb5%3A0x14c67a38c1d71388!2sFont%20Romeu%2C%2066120%20Font-Romeu-Odeillo-Via!5e0!3m2!1sfr!2sfr!4v1747145212597!5m2!1sfr!2sfr" 
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                                title="Carte de localisation du loft Eclipse 1723 à Font-Romeu">
+                            </iframe>
                         </div>
                     </div>
                     
@@ -237,7 +240,7 @@
                                 
                                 <label>
                                     <p>Nom de famille :</p>
-                                    <input type="text" name="nom_famille" required>
+                                    <input type="text" required pattern="[A-Za-zÀ-ÿ\- ]+" name="nom_famille" required>
                                 </label>
                                 <label>
                                     <p>Votre numéro de téléphone :</p>
